test_programs/compile_failure/noirc_frontend_tests_unconditional_recursion_fail_9/src/main.nr

        fn main() -> pub u64 {
            let mut sum = 0;
            for i in 0 .. main() {
                sum += i;
            }
            sum
        }
        